[package]
name = "csv-to-duckdb"
version = "1.0.0"
edition = "2024"
rust-version = "1.87"
authors = ["Tau Technologies"]
description = "CLI converting Binance Vision CSVs to a DuckDB .duckdb file"
readme = "README.md"
repository = "https://github.com/tau-technologies-trading/csv-to-duckdb"
homepage = "https://github.com/tau-technologies-trading/csv-to-duckdb"
license = "MIT"
keywords = ["duckdb", "binance", "csv", "trading", "cli"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
csv = "1.4.0"
indicatif = "0.18"

[target.'cfg(not(windows))'.dependencies]
duckdb = { version = "1.10504", features = ["bundled"] }

[target.'cfg(windows)'.dependencies]
duckdb = "1.10504"
